--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -70,11 +70,14 @@
         padding-top: 0px;
         }
 
+        .container input{
+        margin-left: 20px;
+        }
+
         .container fieldset {
         border: 0;
         padding: 0;
         margin: 0;
-
         }
 
         .container table, th, td{
@@ -172,14 +175,15 @@
             font-size: 14px;
         }
 
-        .add-task button {
+        button {
             background-color: #0b2945;
             color: #ffffff;
             border: none;
-            padding: 5px 10px;
+            padding: 4px 10px;
             border-radius: 0px;
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
+            margin: 10px;
         }
 
         .add-task button:hover {
@@ -229,21 +233,15 @@
             color: grey;
         }
 
-        .prozessplan td{
-         height: 70px;
-         width: 120px;
-         word-wrap: wrap-all;
-         border: 1px solid black;
+        #prozess {
+            height: 250px;
+            background-size: cover;
+            position: relative;
         }
-
-        .prozessplan img {
-        width:25px;
-        height: 12px;
-        }
-
-        #pfeil {
-        border: 0px;
-        width: 10px;
-        height: 15px;
-        text-align: left;
+        #link {
+           position: absolute;
+           height: 56px;
+           width: 94px;
+           background-color: green;
+           opacity: .5;
         }
