--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -7,15 +7,7 @@
 
 
 <body>
-    <div class="header">
-        <div style="float: left; padding-left: 50px; padding-top: 35px;"><img src="{{ url_for('static', filename='logo-weiss.svg') }}" alt="Greipl Logo" height="75"></div>
-
-        <div class="navbar">
-           <a href="/" style="color: #0082da; border-bottom: 3px solid #0082da;">Offen</a>
-           <a href=/done>Erledigt</a>
-           <a href="/add_mask">Erstellen</a>
-       </div>
-    </div>
+    {% include 'header.html' %}
 
 
     <div class="container">
