--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,7 @@
 
 </head>
 <body>
-    <div class="header">
-        <div style="float: left; padding-left: 50px; padding-top: 35px;"><img src="{{ url_for('static', filename='logo-weiss.svg') }}" alt="Greipl Logo" height="75"></div>
-
-        <div class="navbar">
-           <a href="/" style="color: #0082da; border-bottom: 3px solid #0082da;">Start</a>
-           <a href="/">Backoffice</a>
-           <a href="/">PM</a>
-            <a href="/">PPS</a>
-            <a href="/">TAV</a>
-            <a href="/">QS</a>
-       </div>
-    </div>
+    {% include 'header.html' %}
 
     <div class="container">
         <h3> >Start</h3>
