--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,9 @@
         <div class="navbar">
         <a href="/" class="{% if request.path == '/' %}active-link{% endif %}">Start</a>
         <a href="/add_mask" class="{% if request.path == '/add_mask' %}active-link{% endif %}">Erfassen</a>
-        <a href="/" class="{% if request.path == '/' %}active-link{% endif %}">PM</a>
-        <a href="/" class="{% if request.path == '/' %}active-link{% endif %}">PPS</a>
-        <a href="/" class="{% if request.path == '/' %}active-link{% endif %}">TAV</a>
-        <a href="/" class="{% if request.path == '/' %}active-link{% endif %}">QS</a>
+        <a href="/" class="{% if request.path == '/X' %}active-link{% endif %}">PM</a>
+        <a href="/" class="{% if request.path == '/X' %}active-link{% endif %}">PPS</a>
+        <a href="/tav" class="{% if request.path == '/tav' %}active-link{% endif %}">TAV</a>
+        <a href="/" class="{% if request.path == '/X' %}active-link{% endif %}">QS</a>
     </div>
     </div>
