--- a/templates/add_mask.html
+++ b/templates/add_mask.html
@@ -29,11 +29,33 @@
                     <p></p>
             </div>
 
+            <!--<div class="AMT_content" style="display: none;">
+                <h3>Ich werde nur angezeigt, wenn ÄMT ausgewählt ist!</h3>
+            </div>-->
+
+            <script>
+                document.addEventListener("DOMContentLoaded", function() {
+                    var typRadios = document.getElementsByName("typ");
+                    var AMT_content = document.querySelectorAll(".AMT_content");
+
+                    for (var i = 0; i < typRadios.length; i++) {
+                        typRadios[i].addEventListener("change", function() {
+                            for (var j = 0; j < AMT_content.length; j++) {
+                                if (this.value === "ÄMT") {
+                                    AMT_content[j].style.display = "block";
+                                } else {
+                                    AMT_content[j].style.display = "none";
+                                }
+                            }
+                        });
+                    }
+                });
+            </script>
+
             <div>
                 <h3>Informationen zum Erzeugnis:</h3>
                 <input type="text" name="GGNR" placeholder="Greipl Nummer" required>
                 <input type="text" name="vorgang" placeholder="Vorgang" required>
-                <input type="text" name="AMTNR" placeholder="ÄMT Nummer">
                 <p></p>
                     <fieldset>
                         <input type="radio" id="1" name="kat" value="1">
@@ -46,8 +68,25 @@
                         <input type="checkbox" id="EMPB" name="EMPB" />
                         <label for="EMPB">Kunde fordert EMPB</label>
                     </fieldset>
+            </div>
 
-
+            <div class="AMT_content" style="display: none;">
+                <h3>Änderungsdaten:</h3>
+                <span>ÄMT-Nummer:</span>
+                <input type="text" name="AMTNR" placeholder="ÄMT-NR">
+                <p></p>
+                <span>Aktuelle Revision:</span>
+                <input type="text" name="REV" placeholder="REV">
+                <span>Neue Revision:</span>
+                <input type="text" name="REV_new" placeholder="Neue Revision">
+                <p></p>
+                <fieldset>
+                        <span>Änderung von:</span>
+                        <input type="radio" id="intern" name="change" value="0">
+                        <label for="intern">Intern</label>
+                        <input type="radio" id="extern" name="change" value="1">
+                        <label for="extern">Extern</label>
+                </fieldset>
             </div>
 
             <div>
