--- a/templates/QS.html
+++ b/templates/QS.html
@@ -10,7 +10,7 @@
 {% include 'header.html' %}
 
     <div class="container">
-        <h2>Aktuelle Projekte:</h2>
+        <h2>Offene Aufgaben Qualitätssicherung:</h2>
 
             <table>
                    <tr style="font-size: 14px">
