--- a/templates/add_mask.html
+++ b/templates/add_mask.html
@@ -11,10 +11,9 @@
     {% include 'header.html' %}
 
     <div class="container">
-        <h1>ÄMT/NT Liste</h1>
-        <h2>> Eintrag erstellen</h2>
+        <h2>Eingabe der Daten vom Backoffice:</h2>
 
-        <p style="background-color: #0b2945; color: white; padding: 10px; margin: 0px; width: 50%">Eintrag erstellen</p>
+        <p style="background-color: #0b2945; color: white; padding: 10px; margin: 0px; width: 50%">Eintrag erstellen:</p>
         <form action="/add" method="POST" class="add-task" style="width: 50%">
             <div>
                     <h3>Typ:</h3>
@@ -76,7 +75,7 @@
                 <input type="text" name="AMTNR" placeholder="ÄMT-NR">
                 <p></p>
                 <span>Aktuelle Revision:</span>
-                <input type="text" name="REV" placeholder="REV">
+                <input type="text" name="REV" placeholder="Alte Revision">
                 <span>Neue Revision:</span>
                 <input type="text" name="REV_new" placeholder="Neue Revision">
                 <p></p>
