- HTML Seiten für die jeweiligen Abteilungen angelegt. - Start Seite Übersichtstabelle ergänzt - Dynamische Anzeige auf Prozessplan

--- a/templates/tav.html
+++ b/templates/tav.html
@@ -10,6 +10,8 @@
 
       <div class="container">
 
+          <h2>Offene Aufgaben technische Arbeitsvorbereitung:</h2>
+
             <table>
                    <tr><td colspan="100%" style="font-size: 12px">
                        <div style="float: right">
