--- a/templates/add_mask.html
+++ b/templates/add_mask.html
@@ -86,6 +86,7 @@
                         <input type="radio" id="extern" name="change" value="1">
                         <label for="extern">Extern</label>
                 </fieldset>
+                <p></p>
             </div>
 
             <div>
@@ -95,33 +96,15 @@
                 <p></p>
                 <label for="desiredDate">Datum gewünschte Freigabe:</label>
                 <input type="date" id="desiredDate" name="desiredDate" min="2023-01-01" required/>
+                <p></p>
             </div>
 
-            <div>
-                <h3>Betroffene Bereiche:</h3>
-                <input type="checkbox" id="m1" name="m1" />
-                <label for="m1">M1</label>
-                <input type="checkbox" id="m2" name="m2" />
-                <label for="m2">M2</label>
-                <input type="checkbox" id="m3" name="m3" />
-                <label for="m3">M3</label>
-                <input type="checkbox" id="m4" name="m4" />
-                <label for="m4">M4</label>
-                <input type="checkbox" id="pt" name="pt" />
-                <label for="pt">PT</label>
-                <input type="checkbox" id="e1" name="e1" />
-                <label for="e1">E1</label>
-                <input type="checkbox" id="l1" name="l1" />
-                <label for="l1">L1/L2</label>
-                <input type="checkbox" id="kt" name="kt" />
-                <label for="kt">KT</label>
-            </div>
             <div>
                 <h3>Notiz:</h3>
                 <textarea name="note" placeholder="Bemerkung" cols="50%" rows="10"></textarea>
             </div>
 
-            <div style="border: 0px; margin:10px"><button type="submit">Hinzufügen</button></div>
+            <div style="border: 0px; margin:10px"><button type="submit">Anlegen</button></div>
 
             </form>
     </div>
