--- a/templates/TAV.html
+++ b/templates/TAV.html
@@ -51,11 +51,11 @@
 
                 <tr class="task-list">
                 {% for task in tasks %}
-                    {% if not task.completed %}
+                    {% if task.state == 2 or task.state ==  7 %}
 
                     <tr class="task {% if task.completed %}completed{% endif %}" style="border-bottom: 1px solid; border-right: 1px solid; border-left: 1px solid;" >
 
-                        <td><center><a href="/task_edit/{{ task.id }}" style="background-color: transparent; padding-top:3px;"><img class="icon" src="{{ url_for('static', filename='edit.png') }}" alt="Icon"></a></center></td>
+                        <td><center><a href="/process/{{ task.id }}" style="background-color: transparent; padding-top:3px;"><img class="icon" src="{{ url_for('static', filename='edit.png') }}" alt="Icon"></a></center></td>
                         <td>{{ task.typ }}</td>
                         <td>{{ task.kat }}</td>
                         <td>{{ task.GGNR }}</td>
