Prozessstatusdiagramm überarbeitet, Funktion Kalkulation angelegt

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,11 +2,12 @@
         <div style="float: left; padding-left: 50px; padding-top: 35px;"><img src="{{ url_for('static', filename='logo-weiss.svg') }}" alt="Greipl Logo" height="75"></div>
 
         <div class="navbar">
-        <a href="/" id="{% if request.path == '/' %}active-link{% endif %}">Start</a>
-        <a href="/add_mask" id="{% if request.path == '/add_mask' %}active-link{% endif %}">Erfassen</a>
-        <a href="/PM" id="{% if request.path == '/PM' %}active-link{% endif %}">PM</a>
-        <a href="/PPS" id="{% if request.path == '/PPS' %}active-link{% endif %}">PPS</a>
-        <a href="/tav" id="{% if request.path == '/tav' %}active-link{% endif %}">TAV</a>
-        <a href="/QS" id="{% if request.path == '/QS' %}active-link{% endif %}">QS</a>
+                <a href="/" id="{% if request.path == '/' %}active-link{% endif %}">Start</a>
+                <a href="/add_mask" id="{% if request.path == '/add_mask' %}active-link{% endif %}">Erfassen</a>
+                <a href="/PM" id="{% if request.path == '/PM' %}active-link{% endif %}">PM</a>
+                <a href="/PPS" id="{% if request.path == '/PPS' %}active-link{% endif %}">PPS</a>
+                <a href="/tav" id="{% if request.path == '/tav' %}active-link{% endif %}">TAV</a>
+                <a href="/QS" id="{% if request.path == '/QS' %}active-link{% endif %}">QS</a>
+                <a href="/help" style="background-color: transparent;"><img class="icon" src="{{ url_for('static', filename='help.png') }}" alt="Icon" height="20px" style="filter: invert(100%);"></a>
         </div>
 </div>
