--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -47,19 +47,20 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
-        .container h1 {
+        h1 {
         color: #0b2945;
         font-size: 40px;
         text-decoration:bold;
         margin: 15px
         }
 
-        .container h2 {
+        h2 {
         color: #0b2945;
-        font-size: 16px;
+        font-size: 20px;
         text-decoration:bold;
         margin-top: 0px;
         padding-top: 20px;
+        padding-bottom: 20px;
         }
 
         h3 {
@@ -68,7 +69,6 @@
         text-decoration: bold;
         margin: 10px;
         }
-
 
         .container fieldset {
         border: 0;
@@ -158,8 +158,10 @@
         }
 
         .task td {
-        border: 1px solid;
-        font-size: 12px;
+            border: 1px solid;
+            font-size: 12px;
+            color: black;
+            text-align: center;
         }
 
         .add-task {
@@ -202,7 +204,6 @@
         .add-task button:hover {
             color: #0082da;
         }
-
 
         .add-task div {
         margin: 20px;
@@ -268,11 +269,11 @@
            padding: 3px;
            text-align: left;
            font-size: 14px;
+           color: black;
         }
         #table1 th {
             text-align: center;
         }
-
 
         #active-link {
             color: #0082da;
@@ -296,3 +297,52 @@
              text-align: left;
              font-size: 14px;
          }
+
+         #kreis_open {
+            width: 60px;
+            height: 60px;
+            border-radius: 50px;
+            background-color: lightgrey;
+            border: 4px solid white;
+            outline: 1px solid black;
+            margin:0 auto;
+         }
+
+         #kreis_done {
+            width: 60px;
+            height: 60px;
+            border-radius: 50px;
+            background-color: #0082da;
+            border: 4px solid white;
+            outline: 1px solid black;
+            margin:0 auto;
+         }
+
+         #kreis2 {
+            position: relative;
+            width: 50px;
+            height: 50px;
+            border-radius: 35px;
+            background-color: #ffffff;
+            left: 5px;
+            top: 5px;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+         }
+
+         #prozesstable table,tr,td{
+            border: 0px;
+         }
+
+         #prozesstable td{
+            text-align: center;
+            font-size: 16px;
+            color: lightgrey;
+         }
+
+         #prozesstable span{
+            font-size: 12px;
+            color: black;
+         }
+
